<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="10"
    android:padding="22dp">

    <Toolbar
        android:layout_weight="1"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view1"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_chevron_left" />

        </LinearLayout>

    </Toolbar>

    <TextView
        android:id="@+id/text_view1"
        android:text="Welcome"
        style="@style/CustomStyle"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_view2"
        android:gravity="center"
        android:text="@string/welcome_note"
        android:textSize="22sp"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_firstName1"
        android:padding="8dp"
        style="@style/MyCustomStyleText"
        android:layout_weight="1"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_lastName1"
        android:padding="8dp"
        style="@style/MyCustomStyleText"
        android:layout_weight="1"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_email1"
        android:padding="8dp"
        style="@style/MyCustomStyleText"
        android:layout_weight="1"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_phone1"
        android:padding="8dp"
        style="@style/MyCustomStyleText"
        android:layout_weight="1"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_address1"
        android:padding="8dp"
        style="@style/MyCustomStyleText"
        android:layout_weight="1"
        android:hint="@string/the_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_submit1"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:background="@drawable/btn_submit"
        android:textColor="@color/colorPrimary"
        android:layout_weight="0.5"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>