<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="3"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <ImageView
        android:layout_weight="0.5"
        android:id="@+id/image_view_profile1"
        android:src="@drawable/ic_chevron_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/image_view_profile2"
                android:src="@drawable/osehi"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_firstNameNew"
                android:text="@string/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/text_lastNameNew"
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:padding="4dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/text_email"
                android:text="@string/your_email"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="55dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:padding="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_weight="1"
                android:id="@+id/image_email"
                android:src="@drawable/ic_email_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/image_message"
                android:src="@drawable/ic_message_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_weight="1"
                android:id="@+id/image_call"
                android:src="@drawable/ic_call_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="4dp"
                android:id="@+id/text_description1"
                android:hint="@string/the_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/text_firstName"
                android:textStyle="bold"
                android:text="Victor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="4dp"
                android:id="@+id/text_description3"
                android:hint="@string/the_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/text_lastName"
                android:textStyle="bold"
                android:text="Kola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="4dp"
                android:id="@+id/text_description5"
                android:hint="@string/the_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/text_phone"
                android:textStyle="bold"
                android:text="07083372454"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="4dp"
                android:id="@+id/text_description7"
                android:hint="@string/the_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/text_emailprofile"
                android:textStyle="bold"
                android:text="osehiproductengineer@gmail.com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="4dp"
                android:id="@+id/text_description9"
                android:hint="@string/the_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/text_address"
                android:textStyle="bold"
                android:text="2nd Floor, Traditions Building, Lekki, Lagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>